<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/left_menu_linkedin"
            android:checked="true"
            android:icon="@drawable/ic_move_to_inbox_black_24dp"
            android:title="@string/left_menu_linkedin"
            />

        <item
            android:id="@+id/left_menu_job_search"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="@string/left_menu_job_search"
            />

        <item
            android:id="@+id/left_menu_pulse"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/left_menu_pulse"
            />

        <item
            android:id="@+id/left_menu_movie"
            android:icon="@drawable/ic_report_black_24dp"
            android:title="@string/left_menu_movie"
            />

        <item
            android:id="@+id/left_menu_book"
            android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/left_menu_book"
            />

    </group>
</menu>
